non-oss/pharos_pro/addons/kontena-lens/resources/10-redis-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
  namespace: kontena-lens
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      restartPolicy: Always
      containers:
      - name: redis
        image: docker.io/redis:4-alpine
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /data
          name: data
        resources:
          requests:
            memory: "32Mi"
            cpu: "20m"
          limits:
            memory: "64Mi"
            cpu: "50m"
      volumes:
      - name: data
        emptyDir: {}
