non-oss/pharos_pro/addons/kontena-lens/resources/08-dashboard-service.yml
kind: Service
apiVersion: v1
metadata:
  name: dashboard
  namespace: kontena-lens
spec:
  selector:
    app: dashboard
  ports:
  - port: 8889
    targetPort: 8889
