non-oss/pharos_pro/addons/kontena-lens/resources/11-redis-service.yml
kind: Service
apiVersion: v1
metadata:
  name: redis
  namespace: kontena-lens
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
