non-oss/pharos_pro/addons/kontena-lens/resources/15-helm-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helmcharts
  namespace: kontena-lens
spec:
  ports:
    - protocol: TCP
      port: 9292
      targetPort: 9292
  selector:
    app: helm-api
  type: ClusterIP
