non-oss/pharos_pro/addons/kontena-lens/resources/16-k8s-resource-applier-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-resource-applier
  namespace: kontena-lens
spec:
  ports:
    - protocol: TCP
      port: 9393
      targetPort: 9393
  selector:
    app: k8s-resource-applier
  type: ClusterIP
