non-oss/pharos_pro/addons/kontena-lens/resources/02-redis-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
  namespace: kontena-lens
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {} # matches to all pods within kontena-lens namespace
    ports:
    - port: 6379
      protocol: TCP
