non-oss/pharos_pro/addons/kontena-lens/resources/10-redis-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
  namespace: kontena-lens
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dashboard
    ports:
    - protocol: TCP
      port: 6379
